# glofluence-microservice-workspace

./: .gitignore  README.md
.devcontainer/: devcontainer.json  disabled.devcontainer.json
gateway/: playground.html
gateway/configs/: supergraph.yaml
gateway/docs/: setup.md
gateway/schemas/: business.graphql  identity.graphql  supergraph.graphql  term.graphql  wallet.graphql
node-workspace/: nest-cli.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
node-workspace/apps/identity/src/: app.module.ts  app.resolver.ts  app.service.ts  main.ts
node-workspace/apps/wallet/src/: app.module.ts  app.resolver.ts  app.service.ts  main.ts
node-workspace/libs/corelib/src/: corelib.module.ts  corelib.service.spec.ts  corelib.service.ts  index.ts
rust-workspace/: Cargo.toml
rust-workspace/bins/business/: Cargo.toml
rust-workspace/bins/taxonomy/: Cargo.toml
rust-workspace/bins/term/: Cargo.toml
rust-workspace/bins/term/src/: main.rs
rust-workspace/bins/term/src/graphql/: inputs.rs  mutation.rs  query.rs  types.rs
rust-workspace/bins/term/src/routes/handlers/: graphiql.rs
rust-workspace/bins/term/src/setup/: env.rs  state.rs
rust-workspace/bins/user/: Cargo.toml
rust-workspace/gateway/configs/: router.yaml  supergraph.yaml
rust-workspace/gateway/docs/: setup.md
rust-workspace/gateway/schemas/: supergraph.graphql  taxonomy.graphql  term.graphql  user.graphql
rust-workspace/libs/bin_shared_kernel/: Cargo.toml
rust-workspace/libs/corelib/: Cargo.toml
rust-workspace/libs/env_config/: Cargo.toml
scripts/: run-all.sh
(+114 files in other folders)
