[package]
name = "term"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { version = "7.0.17", features = ["uuid", "chrono"] }
async-graphql-axum = "7.0.17"
axum = "0.8.7"
corelib = { path = "../../libs/corelib" }
env_config = { path = "../../libs/env_config" }
bin_shared_kernel = { path = "../../libs/bin_shared_kernel" }
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
chrono = "0.4.42"
uuid = { version = "1.18.1", features = ["v4"] }
